--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,21 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV["RAILS_DB_POOL"] || ENV['RAILS_MAX_THREADS'] || 5 %>
+  idle_timeout: <%= ENV["RAILS_IDLE_CONNECTION"] ||  60 %>
+  port: <%= ENV['RAILS_DATABASE_PORT'] || 5432 %>
+  host: <%= ENV['TEMPLATE_DATABASE_HOSTNAME'] || 'localhost' %>
+  username: <%= ENV['TEMPLATEAPP_DATABASE_USER'] || 'rails' %>
+  password: <%= ENV['TEMPLATEAPP_DATABASE_PASSWORD'] || 'rails' %>
 
 development:
   <<: *default
-  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+  database: <%= ENV['TEMPLATEAPP_DATABASE'] || 'player_management_dev' %>
+  
 test:
   <<: *default
-  database: db/test.sqlite3
-
+  database: <%= ENV['TEMPLATEAPP_DATABASE'] || 'player_management_test' %>
+  
 production:
-  <<: *default
-  database: db/production.sqlite3
+  database: <%= ENV['DATABASE_URL'] %>
+  
